Fix table borders and gaps

--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,12 @@ ul.dropdown-menu {
     border: 1px solid;
 }
 
+.special-title {
+	padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
 .second-title,
 .third-title,
 .fourth-title {
@@ -285,11 +291,12 @@ ul.dropdown-menu {
 /*	display: table-header-group; */
 }
 .divTableCell, .divTableHead {
-	border: 1px solid #000;
+	border-left: 1px solid #000;
+	border-bottom: 1px solid #000;
 	padding: 3px 10px;
   display: block;
   float: left;
-  height: 78px;
+  height: 83px;
 }
 .divTableHeading {
 	background-color: #EEE;
@@ -522,11 +529,16 @@ span.no-4 {
 /*  position: relative; */
   overflow-y: scroll;
 }
+
+.table-header .divTableRow {
+  border-top: 1px solid black;
+}
+
 .table-body {
   display: block;
   overflow-y: scroll;
   height: 78%;
-  border: 1px solid black;
+/*  border: 1px solid black; */
 
 }
 .first-col {
